--- a/index.html
+++ b/index.html
@@ -1,3 +1,12 @@
-<p>
-test
-</p>
+<!DOCTYPE html>
+<html>
+  <head>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+	<title>ビール</title>
+  </head>
+  <body>
+	<p>
+	  test
+	</p>
+  </body>
+</html>
