--- a/hoge.html
+++ b/hoge.html
@@ -2,11 +2,11 @@
 <html>
   <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<title>ビール</title>
+	<title>ビール - hoge -</title>
   </head>
   <body>
 	<p>
-	  <a href="hoge.html">ビール飲みたい</a>
+	  ほげページ
 	</p>
   </body>
 </html>
