--- a/hoge.html
+++ b/hoge.html
@@ -3,10 +3,20 @@
   <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<title>ビール -hoge-</title>
+	<script type="text/javascript" src="hoge.js"></script>
   </head>
-  <body>
+  <body onload="init()">
 	<p>
-	  ほげページ
+	  <ul>
+		<li><a href="hoge1.html" id="hoge1">ほげ1</a></li>
+		<li><a href="hoge2.html" id="hoge2">ほげ2</a></li>
+	  </ul>
+	</p>
+	<p id="hoge1_content">
+	  ほげ1はここ
+	</p>
+	<p id="hoge2_content">
+	  ほげ2はここ
 	</p>
   </body>
 </html>
